# BrilPlay

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: core.hpp  jsonToOur.hpp  livevar.cpp  main.cpp  program.cpp
src/core/: CMakeLists.txt  core.hpp  function.cpp  program.cpp
